Changes for 2.2.11rc1

New features:
A.F....... [ZBX-1357] updated Czech translation; thanks to Zabbix translators (Richlv)

Bug fixes:
..F....... [ZBX-9809] fixed action operation validation (Gunars)
...G...... [ZBX-9716] fixed possible event record number wraparound issues in the old Windows Eventing support (wiper)
.......PS. [ZBX-4284] improved handling of timeouting items on reachable hosts (wiper)
...G...... [ZBX-9721] fixed agent log message for log[] item in case of log records longer than 256kB (gleb)
..F....... [ZBX-7492] fixed "Undefined index" when importing host without macros (Gunars)
....I....T [ZBX-8989] moved Total memory item from Filesystems to Memory application in Template OS Windows (gleb)

--------------------------------------------------------------------------------
Changes for 2.2.10

2.2.10rc2 was released as 2.2.10 without any changes

--------------------------------------------------------------------------------
Changes for 2.2.10rc2

New features:
A.F....... [ZBX-1357] updated Japanese translation; thanks to Zabbix translators (Richlv)

Bug fixes:
........S. [ZBX-9703] fixed a memory leak in SSH checks when configured public and/or private key is not a regular file (Sandis)
..F....... [ZBX-9381] fixed empty host list in popup drowpdowns (Ivo)

--------------------------------------------------------------------------------
Changes for 2.2.10rc1

New features:
A.F....... [ZBX-1357] enabled Czech locale to be displayed by default (Richlv)
...G...PS. [ZBXNEXT-786] made net.tcp.service[ntp] item work over UDP (asaveljevs)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Czech, French, Japanese, Polish and Spanish translations; thanks to Zabbix translators (Richlv)
.....J.... [ZBX-8839] added timeout configuration option to Java gateway (asaveljevs)

Bug fixes:
...G...... [ZBX-9605] fixed an issue with start lines and end lines in vfs.file.regexp[] and vfs.file.regmatch[] (Gleb)